--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,14 @@
     <string name="single_cache_terrain_name">Terrain</string>
     <string name="error_cache_exists">Cache with same name already exists. Please choose a different name.</string>
     <string name="error_cache_name_empty">Cache name cannot be empty. Please choose a unique name for cache.</string>
+
+    <string name="user_menu_item">User</string>
+
     <string-array name="cache_type_array">
         <item>Mystery</item>
         <item>Multi</item>
+        <item>Regular</item>
+        <item>Happening</item>
         <item>Other</item>
     </string-array>
 
